logs/batchjob_3.2714.out
Running on host grad03

Initial Time is Sun 19 Jun 2022 03:39:19 PM -03

Directory is /home/pp12704/t2

This jobs runs on the following nodes:
grad[03-05]

JOB_ID:
2714

Running on folder: 3
with 16 threads
mandelbrot.c: In function ‘main’:
mandelbrot.c:85:25: error: invalid controlling predicate
   85 |     for (int ignore = 0;init < end; init++) {
      |                         ^~~~
mandelbrot.c:85:41: error: invalid increment expression
   85 |     for (int ignore = 0;init < end; init++) {
      |                                     ~~~~^~
running: 500
mandelbrot.c: In function ‘main’:
mandelbrot.c:85:25: error: invalid controlling predicate
   85 |     for (int ignore = 0;init < end; init++) {
      |                         ^~~~
mandelbrot.c:85:41: error: invalid increment expression
   85 |     for (int ignore = 0;init < end; init++) {
      |                                     ~~~~^~
running: 1000
mandelbrot.c: In function ‘main’:
mandelbrot.c:85:25: error: invalid controlling predicate
   85 |     for (int ignore = 0;init < end; init++) {
      |                         ^~~~
mandelbrot.c:85:41: error: invalid increment expression
   85 |     for (int ignore = 0;init < end; init++) {
      |                                     ~~~~^~
running: 1500
mandelbrot.c: In function ‘main’:
mandelbrot.c:85:25: error: invalid controlling predicate
   85 |     for (int ignore = 0;init < end; init++) {
      |                         ^~~~
mandelbrot.c:85:41: error: invalid increment expression
   85 |     for (int ignore = 0;init < end; init++) {
      |                                     ~~~~^~
running: 2000
mandelbrot.c: In function ‘main’:
mandelbrot.c:85:25: error: invalid controlling predicate
   85 |     for (int ignore = 0;init < end; init++) {
      |                         ^~~~
mandelbrot.c:85:41: error: invalid increment expression
   85 |     for (int ignore = 0;init < end; init++) {
      |                                     ~~~~^~
running: 2500
mandelbrot.c: In function ‘main’:
mandelbrot.c:85:25: error: invalid controlling predicate
   85 |     for (int ignore = 0;init < end; init++) {
      |                         ^~~~
mandelbrot.c:85:41: error: invalid increment expression
   85 |     for (int ignore = 0;init < end; init++) {
      |                                     ~~~~^~
running: 3000
mandelbrot.c: In function ‘main’:
mandelbrot.c:85:25: error: invalid controlling predicate
   85 |     for (int ignore = 0;init < end; init++) {
      |                         ^~~~
mandelbrot.c:85:41: error: invalid increment expression
   85 |     for (int ignore = 0;init < end; init++) {
      |                                     ~~~~^~
running: 3500
mandelbrot.c: In function ‘main’:
mandelbrot.c:85:25: error: invalid controlling predicate
   85 |     for (int ignore = 0;init < end; init++) {
      |                         ^~~~
mandelbrot.c:85:41: error: invalid increment expression
   85 |     for (int ignore = 0;init < end; init++) {
      |                                     ~~~~^~
running: 4000
mandelbrot.c: In function ‘main’:
mandelbrot.c:85:25: error: invalid controlling predicate
   85 |     for (int ignore = 0;init < end; init++) {
      |                         ^~~~
mandelbrot.c:85:41: error: invalid increment expression
   85 |     for (int ignore = 0;init < end; init++) {
      |                                     ~~~~^~
running: 4500
mandelbrot.c: In function ‘main’:
mandelbrot.c:85:25: error: invalid controlling predicate
   85 |     for (int ignore = 0;init < end; init++) {
      |                         ^~~~
mandelbrot.c:85:41: error: invalid increment expression
   85 |     for (int ignore = 0;init < end; init++) {
      |                                     ~~~~^~
running: 5000
